# moveit_examples

./: .gitignore  README.md
exampleUR10/: CMakeLists.txt  package.xml
exampleUR10/src/: Hello_world.py  caro_moveit_commander.py  caro_pick_and_place.py  test.py
