<?xml version="1.0"?>
<package format="2">
  <name>exampleUR10</name>
  <version>0.0.1</version>
  <description>The exampleUR10 package</description>

  <maintainer email="carolinalp@gmail.com">Carolina Leon Pinzon</maintainer>

  <license>GPL</license>

  <author email="carolinalp@gmail.com">Carolina Leon Pinzon</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
